@@ -40,6 +40,7 @@ The following CVEs were fixed in this release:
 
 The following bugs are resolved with this release:
 
+  [19341] ctype: Fallback initialization of TLS using relocations
   [19622] network: Support aliasing with struct sockaddr
   [27821] ungetc: Fix backup buffer leak on program exit
   [30081] resolv: Do not wait for non-existing second DNS response after error
@@ -103,6 +104,7 @@ The following bugs are resolved with this release:
   [32810] Crash on x86-64 if XSAVEC disable via tunable
   [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
   [33185] Fix double-free after allocation failure in regcomp
+  [32483] ctype macros segfault in multithreaded programs with multiple libc.so
 
 Version 2.39
 
